# primoPokerServerlessCF

./: .env.test  .eslintrc.js  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CLOUDFLARE_AUTH_SETUP.md  CLOUDFLARE_COST_OPTIMIZATIONS.md  DEBUG_DEPLOYMENT_MONITOR.md  DECOMMISSION_PAGES.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_ISSUE_SUMMARY.md  FINAL_STATUS_REPORT.md  FIX_ASSESSMENT_REPORT.md  FIX_OPTIONS.md  FRONTEND_ROADMAP.md  HANDOFF_NOTE_2025_08_04.md  IMMEDIATE_BUG_FOUND.md  IMPLEMENTATION_PLAN.md  MULTIPLAYER_FIX_OPTIONS.md  MULTIPLAYER_IMPLEMENTATION_STATUS.md  NEW_LOBBY_IMPLEMENTATION_PLAN.md  NEXT_SESSION_TASKS.md  PHASE1_REFACTORING_SUMMARY.md  PHASE1_SPECTATOR_IMPLEMENTATION_SUMMARY.md  PHASE1_SPECTATOR_MODE.md  PHASE2_SEAT_SELECTION_PLAN.md  PHASE2_SEAT_SELECTION_SUMMARY.md  PHASE3_STAND_UP_PLAN.md  PHASE3_STAND_UP_SUMMARY.md  PHASE4_WALLET_INTEGRATION_PLAN.md  PHASE4_WALLET_INTEGRATION_SUMMARY.md  PHASE5_WEBSOCKET_STATE_TRANSITIONS_SUMMARY.md  PHASE6_E2E_TESTING_SUMMARY.md  PHASE_2A_SUMMARY.md  PHASE_2B_SUMMARY.md  PHASE_2C_SUMMARY.md  PHASE_3B2_PLAN.md  PHASE_3B2_PROGRESS.md  PHASE_3B2_STATUS.md  PHASE_3B3_IMPLEMENTATION_SUMMARY.md  (+32 more)
.devcontainer/: devcontainer.json  setup-playwright.sh
.github/: README.md  RELEASE_TEMPLATE.md
.husky/: pre-commit  pre-push
apps/poker-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.windows.json
apps/poker-desktop/src-tauri/icons/: create-icon.ps1  icon.icns
apps/poker-desktop/src-tauri/src/: main.rs
config/: profanity-words.json
docs/: API.md  API_CONTRACT_TESTING.md  API_RESPONSE_VALIDATION.md  (+13 more)
(+576 files in other folders)
